fixing gap in dashboard boxes

--- a/css/pages/dashboard.scss
+++ b/css/pages/dashboard.scss
@@ -30,6 +30,10 @@
 			justify-content: space-between;
 			gap: 2rem;
 
+			@include maxSm {
+				gap: 1rem;
+			}
+
 			h3 {
 				color: $secondaryColor;
 			}
